--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Jesuss27.github.io/personal-portfolio",
+  "homepage": "https://jjav.io/",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
